# HotMap

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
src/: main.rs  programmable_keys.rs  window_listener.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: keymap.rs  linux_listener.rs  main.rs  programmable_keys.rs  tauri_commands.rs  windows_listener.rs
ui/: index.css  index.html  index.js
ui/src/: MacroTypes.ts  ProgrammableKeys.ts  index.js  index.ts
