[package]
name = "hotmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
input = "0.7.1"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }

[dependencies]
obws = "0.10.0-beta.3"
tokio = { version = "1.21.0", features = ["net", "rt", "sync", "time", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11.12", features = ["json", "stream"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"