[package]
name = "hotmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
input = "0.7.1"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }

[build-dependencies]
tauri-build = { version = "1.5.2" }

[dependencies]
tokio = { version = "1.21.0", features = ["net", "rt", "sync", "time", "macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = ["system-tray"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]