[package]
name = "hotmap"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
input = "0.9.0"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }

[build-dependencies]
tauri-build = { version = "1.5.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = ["system-tray"] }
enigo = { version = "0.2.1", features = ["serde", "wayland", "x11rb"] }

[profile.release]
strip = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]